--- a/webpage.html
+++ b/webpage.html
@@ -65,7 +65,7 @@ input[type="submit"]:hover {
 </style>
 <body>
     <h1>Hyderabad House Forecast</h1>
-    <p>This is based on a Decision Tree ML model having<br> r-squared score of ~0.64</p>
+    <p>This is a Random Forest based ML model having<br> r-squared score of ~0.72</p>
     <p>Predict the price of a home based on Location and Sqft</p>
     <form action="/predict" method="post">
 
